--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ certifi==2025.8.3
 charset-normalizer==3.4.3
 Django==5.2.6
 django-cors-headers==4.9.0
+django-filter==25.2
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 idna==3.10
