--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 idna==3.10
 pillow==11.3.0
+psycopg2-binary==2.9.10
 PyJWT==2.10.1
 python-decouple==3.8
 razorpay==2.0.0
