--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,8 +2,10 @@ amqp==5.3.1
 asgiref==3.9.2
 barcode==1.0.4
 billiard==4.2.2
+cairocffi==1.7.1
 celery==5.5.3
 certifi==2025.8.3
+cffi==2.0.0
 charset-normalizer==3.4.3
 click==8.3.0
 click-didyoumean==0.3.1
@@ -19,9 +21,12 @@ idna==3.10
 kombu==5.5.4
 Levenshtein==0.27.1
 packaging==25.0
+pangocairocffi==0.7.0
+pangocffi==0.13.0
 pillow==11.3.0
 prompt_toolkit==3.0.52
 psycopg2-binary==2.9.10
+pycparser==2.23
 PyJWT==2.10.1
 PyPDF2==3.0.1
 python-barcode==0.16.1
