--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,5 +28,5 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd /home/${{ secrets.VPS_USER }}/app
-            docker-compose down
-            docker-compose up -d --build
+            docker compose down
+            docker compose up -d --build
