--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -15,7 +15,7 @@ server {
 
     # Proxy API requests to Django backend
     location /api/ {
-        proxy_pass http://django_app:8000/api/;
+        proxy_pass http://django_app:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
