--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,16 +11,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Copy files to VPS
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          source: "."
-          target: "/home/${{ secrets.VPS_USER }}/app"
-
-      - name: Rebuild containers on VPS
+      - name: SSH into VPS and update via Git
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.VPS_HOST }}
@@ -28,5 +19,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd /home/${{ secrets.VPS_USER }}/app
+            git fetch origin main
+            git reset --hard origin/main
             docker compose down
             docker compose up -d --build
